@startuml

title __QUERY_SERVICE's Class Diagram__\n

  namespace wasteless.server {
    namespace business {
      namespace query_service {
        class wasteless.server.business.query_service.GroceryListQueryService {
            + GroceryListQueryService()
            + getAllGroceryLists()
            + getGroceryListById()
        }
        class wasteless.server.business.query_service.ItemQueryService {
                    + ItemQueryService()
                    + getAllItems()
                    + getItemById()
        }

         class wasteless.server.business.query_service.UserQueryService {
                    + UserQueryService()
                    + getActiveUser()
                    + getAllUsers()
                    + getUserById()
                    + loginUser()
        }
      }
    }
  }
  

  

  wasteless.server.business.query_service.GroceryListQueryService o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
  wasteless.server.business.query_service.GroceryListQueryService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
  wasteless.server.business.query_service.GroceryListQueryService o-- wasteless.server.persistance.UserRepository : userRepository
  wasteless.server.business.query_service.ItemQueryService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
  wasteless.server.business.query_service.ItemQueryService o-- wasteless.server.persistance.ItemRepository : itemRepository
  wasteless.server.business.query_service.UserQueryService o-- wasteless.server.persistance.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
